--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h6>WELCOME TO MY WORLD</h6>
           <h1>I’m Yash Kumar Bansal<br><span>Software Developer.</span><br>based in India.</h1>
           <div class="mt-4">
-            <a class="main-btn" href="resume/resume.docx">Download CV</a>
+            <a class="main-btn" href="https://bigbucket99.s3.ap-south-1.amazonaws.com/BANSAL+CV.pdf">Download CV</a>
           </div>
         </div>
       </div>
